--- a/app/src/main/res/layout/station_card_layout.xml
+++ b/app/src/main/res/layout/station_card_layout.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
@@ -13,8 +13,8 @@
         android:layout_marginStart="16dp"
 
         android:layout_marginTop="8dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
         app:cardPreventCornerOverlap="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
